--- a/.makeup/app/sass/app.sass
+++ b/.makeup/app/sass/app.sass
@@ -5,42 +5,46 @@
 @import "sprite_jpg"
 
 *::-webkit-input-placeholder
-	color: #777
-	opacity: 1
+  color: #777
+  opacity: 1
 
 *:-moz-placeholder
-	color: #777
-	opacity: 1
+  color: #777
+  opacity: 1
 
 *::-moz-placeholder
-	color: #777
-	opacity: 1
+  color: #777
+  opacity: 1
 
 *:-ms-input-placeholder
-	color: #777
-	opacity: 1
+  color: #777
+  opacity: 1
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
-	color: #777
+  color: #777
 body input:required:valid,
 body textarea:required:valid
-	color: #777
+  color: #777
 
 html, body
-	height: 100%
+  height: 100%
 
 body
-	font-size: 16px
-	position: relative
-	line-height: 1.75
-	font-family: 'Open Sans', sans-serif
-	overflow-x: hidden
-	opacity: 1
+  font-size: 16px
+  position: relative
+  line-height: 1.75
+  font-family: 'Open Sans', sans-serif
+  overflow-x: hidden
+  opacity: 1
+
+h1
+  text-align: center
+  text-transform: uppercase
 
 .img-responsive
-	display: block
-	max-width: 100%
-	height: auto
+  display: block
+  max-width: 100%
+  height: auto
 
 @import "media"
